add pt.po (#529529).

--- a/qof/po/ChangeLog
+++ b/qof/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-05-19  "Traduz - Portuguese Translation Team" <traduz@debianpt.org>
+
+	po/pt.po: New Portuguese translation.
+
 2009-05-17  Tomas Fidler <tomas.fidler@tiscali.cz>
 
 	po/cs.po: New Czech translation.
