Drop libgda3 from dependencies - gda-backend is still broken and libgda4 is pending which does not include the libsql code or symbols anymore. Use internal qofsql support.

--- a/debian/trunk/debian/changelog
+++ b/debian/trunk/debian/changelog
@@ -7,8 +7,11 @@ qof (0.8.1-1) unstable; urgency=low
   * Update standards version. (no changes)
   * Repeat the same prefix in each description. (Closes: #532863)
   * update debian/xcontrol with emxcontrol.
+  * Drop libgda3 from dependencies - gda-backend is still broken and
+    libgda4 is pending which does not include the libsql code or symbols
+    anymore. Use internal qofsql support.
 
- -- Neil Williams <codehelp@debian.org>  Sun, 05 Jul 2009 13:11:35 +0100
+ -- Neil Williams <codehelp@debian.org>  Sun, 05 Jul 2009 17:18:40 +0100
 
 qof (0.8.0-1) unstable; urgency=low
 
