--- a/debian/trunk/debian/changelog
+++ b/debian/trunk/debian/changelog
@@ -1,3 +1,10 @@
+qof (0.8.2-1) unstable; urgency=low
+
+  * New upstream release.
+  * [INTL:DE] Adds German translation (Closes: #539249)
+
+ -- Neil Williams <codehelp@debian.org>  Thu, 06 Aug 2009 22:00:00 +0100
+
 qof (0.8.1-1) unstable; urgency=low
 
   * New upstream release.
