--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -271,7 +271,8 @@ QOF 0.7.4 is available in the official repository of Gentoo Linux.
 
 ### RPM packages
 
-There is a sample .spec file available in QOF CVS, available via
+There is an <a href="http://uk.bestessay.com">essay</a>
+sample .spec file available in QOF CVS, available via
 <a href="http://cvs.sourceforge.net/viewcvs.py/qof/qof/rpm/">SourceForge</a>.
 <a href="http://rpmfind.net/linux/rpm2html/search.php?query=qof">RPM packages</a>
 have been prepared for v0.6.4 in Fedora 4 and 5 as well as OpenSuSE Factory.
