--- a/qof/po/ChangeLog
+++ b/qof/po/ChangeLog
@@ -1,3 +1,8 @@
+2009-11-13  Vincenzo Campanella <vinz65@gmail.com>
+
+	* LINGUAS: Add it.
+	* it.po: New Italian translation.
+
 2009-05-19  "Traduz - Portuguese Translation Team" <traduz@debianpt.org>
 
 	po/pt.po: New Portuguese translation.
