--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -320,4 +320,4 @@ Last updated by Neil Williams &lt;linux@codehelp.co.uk&gt; May 2009.
 
 [[ikiwiki/WikiLink]]
 
-[Web Hosting](http://webspacehosting) This site is powered by [ikiwiki](http://ikiwiki.info).
+[Web Hosting](http://webspacehosting.com) This site is powered by [ikiwiki](http://ikiwiki.info).
