--- a/wiki/trunk/index.mdwn
+++ b/wiki/trunk/index.mdwn
@@ -302,6 +302,7 @@ Some projects currently using QOF are:
 * <a href="http://www.themarketingmentor.com">internet marketing consultant</a> - online community.
 * <a href="http://pilot-qof.sourceforge.net/">pilot-qof</a> (Query Palm databases).
 * <a href="http://dwi.sourceforge.net/">DWI</a> (Data With Interaction).
+* <a href="http://uk.bestessays.com">Essay</a> project status - online research.
 * <a href="http://cashutil.sourceforge.net/">CashUtil</a> (the gnucash command line interface).
 * <a href="http://gpe-expenses.sourceforge.net/">gpe-expenses</a> for embedded devices like iPAQs.
 * <a href="http://www.mustuniversity.com/programs/degree/associate-degree.html">online associate Degree</a>
