--- a/wiki/trunk/hacking.mdwn
+++ b/wiki/trunk/hacking.mdwn
@@ -1,4 +1,3 @@
-
 <div id="actions">
 <ul>
 <li><a href="../#intro">Introduction</a></li>
@@ -31,7 +30,7 @@ symbol of the same name"></div>
 <li><a href="#libqof1">libqof1 API/ABI compatibility</a>.</li>
 <li><a href="#required">MAX_REQUIRED specifiers</a></li>
 <li><a href="#dwi">DWI now unsupported.</a></li>
-<li><a href="#datetime">Date and time changes</a></li>
+<li><a href="#datetime">Date and time changes</a> <a href="http://www.nationhighschool.com/">Online Diploma</a></li>
 <li><a href="#gda">libgda versions.</a></li>
 </ul>
 </li>
@@ -40,7 +39,7 @@ symbol of the same name"></div>
 <li><a href="#libxml">libxml2 &gt;= 2.5.10</a></li>
 <li><a href="#nogtk">There is no QOF dependency on Gtk!</a></li>
 <li><a href="#noperl">There is no need for perl or intltool</a></li>
-<li><a href="#backend">Which backend to use?</a></li>
+<li><a href="#backend">Which backend to use?</a><a href="http://www.nationhighschool.com/ged.asp">Online GED</a></li>
 <li><a href="#embedded">QOF for embedded devices</a></li>
 </ul>
 </li>
@@ -158,7 +157,7 @@ have two choices:</p>
 <p>Either way, the deprecated functions will then be removed from
 QOF in a single operation that takes us smoothly from libqof1 to
 libqof2. This is expected to happen with QOF v0.8.0, once the GDA
-backend is functional.</p>
+backend is functional.<a href="http://www.nationhighschool.com/home-schooling.asp">Homeschool online</a></p>
 </div>
 <hr>
 <h3 id="required">MAX_REQUIRED specifiers</h3>
@@ -198,7 +197,7 @@ an extended version of struct tm. Applications using QOF
 should now use QofTime to replace time_t and QofDate to
 replace struct tm. Functions like localtime, gmtime, mktime
 and time can be used externally - subject to the more limited
-range of values supported in each case.</p>
+range of values supported in each case.<a href="http://www.nationhighschool.com/accreditation/index.asp">Accredited high school diploma</a></p>
 <p>QOF_TYPE_DATE is now deprecated, to be replaced by
 QOF_TYPE_TIME. This is the first change in the QofObject
 API in libqof1 and requires significant changes within
@@ -215,7 +214,7 @@ the universe by using 64bit values wherever necessary.</p>
 <p>0.7.0 introduced strftime and strptime extended code
 based on the Debian coreutils package (specifically the 'date'
 command) and the glibc source code, providing support for
-nanosecond formats and the full range of QofTime and QofDate.</p>
+nanosecond formats and the full range of QofTime and QofDate.<a href="http://www.nationhighschool.com/eligibility/index.asp">Get high school diploma</a></p>
 </div>
 
 <hr>
